# searxng-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
searxng/: __init__.py  cli.py  mcp.py  search.py  searx_search.py
