[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "searxng-mcp"
dynamic = ["version"]
authors = [
  { name="varlabz", email="varlabz@umdoze.com" },
]
description = "A tool for performing searches using SearXNG, with both CLI and Model Context Protocol (MCP) interfaces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.10.0"
]

[project.urls]
"Homepage" = "https://github.com/varlabz/searxng-mcp"
"Bug Tracker" = "https://github.com/varlabz/searxng-mcp/issues"

[project.scripts]
searxng-mcp = "searxng.mcp:main"
searxng-cli = "searxng.cli:main"

[tool.setuptools]
packages = ["searxng"]

[tool.setuptools.dynamic]
version = {attr = "searxng.__version__"}